fix: fixed the product details alignment on smaller screens

--- a/src/Components/SingleProductDetail/single-product-detail.css
+++ b/src/Components/SingleProductDetail/single-product-detail.css
@@ -25,5 +25,6 @@
   .singleproduct__details {
     border-top: 1px solid var(--border-color);
     border-left: none;
+    text-align: left;
   }
 }
